--- a/aboutus.html
+++ b/aboutus.html
@@ -5,12 +5,15 @@
     <!-- Required meta tags always come first -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--bootstrap link add first-->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+
+    <!-- Additional CSS must be placed after Bootstrap CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css" />
-
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <title>NuCamp: A Better Way To Camp</title>
 </head>
 
@@ -34,16 +37,18 @@
             <div class="collapse navbar-collapse" id="nucampNavebar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="index.html"><i class="fa fa-home fa-lg"></i> Home</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#"><i class="fa fa-info fa-lg"></i> About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Site</a>
+                        <a class="nav-link" href="#">
+                            <i class="fa fa-list fa-lg"></i> Site</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#">
+                            <i class="fa fa-address-card fa-lg"></i> Contact</a>
                     </li>
                 </ul>
             </div>
@@ -100,13 +105,13 @@
                 </div>
                 <div class="col-6 col-sm-5 text-center">
                     <h5>Social</h5>
-                    <a href="http://instagram.com/">Instagram</a>
-                    <a href="http://facebook.com/">Facebook</a>
-                    <a href="http://twitter.com/">Twitter</a>
-                    <a href="http://youtube.com/">YouTube</a>
+                    <a href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
+                    <a href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
+                    <a href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+                    <a href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
                 </div>
                 <div class="col-sm-4 text-center">
-                    Tel: 1-206-555-1234<br /> Email: campsites@nucamp.co
+                    <i class="fa fa-phone fa-lg text-primary"></i> 1-206-555-1234<br /> <i class="fa fa-envelope fa-lg text-primary"></i> campsites@nucamp.co
                 </div>
             </div>
         </div>
